# GeoEvoBuilder

./: .gitignore  LICENSE  README.md  py38env.yml  pyproject.toml  run_GeoEvoBuilder.py  setup.sh
.github/workflows/: ci.yml
MSA_Processing/: README.md  run_sequenceprofile.py
examples/: 3D80_A_fixed_residues  3mpc_A.a3m  3mpc_A.aln  3mpc_A.pt
geoevobuilder/: __init__.py  sampling.py
geoevobuilder/Utils/: coords.py  pdb_processor.py
geoevobuilder/builder/: test.py
geoevobuilder/builder/buildprotein/: Geometry.py  PeptideBuilder.py  RebuildStructure.py
geoevobuilder/builder/myclass/: Atoms.py  Myio.py  Residues.py
geoevobuilder/common/: run_argparse.py
geoevobuilder/src/: Sc.py  Se.py  bases.py
